Restore Java 21 target and simplify virtual thread code for ojp-server runtime
Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>